--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@corbado/react": "^3.0.0",
+        "@corbado/react": "^3.1.0",
+        "@corbado/shared-util": "^1.0.9",
         "@tanstack/react-query": "^5.62.11",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
